# deepview

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  mkdocs.yml  pyproject.toml
docs/: faq.md  glossary.md  index.md  roadmap.md  troubleshooting.md
docs/adr/: 0001-data-layer-composition-over-inheritance.md  0002-lazy-import-optional-deps.md  0003-mkdocs-over-sphinx.md  0004-process-pool-default-offload-backend.md  0005-pluggable-unlocker-via-module-attr.md  0006-fail-secure-remote-acquisition.md  0007-encryptionkeyscanner-feeds-unlocker.md  0008-events-not-callbacks.md  0009-dump-format-detection-by-magic-then-extension.md  0010-strict-mypy-and-py310-baseline.md  index.md  template.md
docs/architecture/: containers.md  offload.md  remote-acquisition.md  storage.md  tracing-and-classification.md
docs/brand/: index.md  palette.md  svg-icons.md  typography.md  voice-and-tone.md
docs/comparison/: autopsy.md  frida-standalone.md  gdb-rr.md  index.md  velociraptor.md  volatility.md
docs/compliance/: attack-mapping.md  evidence-integrity.md  gdpr-and-pii.md  index.md  iso-27037.md  nist-sp-800-86.md  stix-output.md
docs/cookbook/: 01-acquire-then-analyse.md  02-stack-nand-ecc-ftl.md  03-mount-filesystem-on-disk-image.md  04-walk-deleted-files.md  05-unlock-luks-with-passphrase.md  06-extract-key-from-memory.md  07-nested-decrypt-luks-in-veracrypt.md  08-submit-offload-job.md  09-stream-trace-events.md  10-record-and-replay-session.md  11-build-remote-endpoint-config.md  12-write-a-custom-data-layer.md  index.md
docs/deployment/: ci-cd.md  docker.md  index.md  isolated-lab.md  kubernetes.md  sift-workstation.md
docs/diagrams/sources/: 01-architecture.mmd  12-gpu-fallback.mmd  (+18 more)
docs/formats/: bitlocker.md  crashdump.md  elf-core.md  emmc-raw.md  filevault2.md  gpu-vram.md  hibernation.md  hyperv-vmrs.md  index.md  jtag-ram.md  lime.md  luks1.md  luks2.md  mbr-gpt.md  minidump.md  nand-raw.md  spi-flash.md  veracrypt.md  virtualbox-sav.md  vmware-vmem.md
docs/guides/: extending-deepview.md  offload-pbkdf2.md  remote-acquire-dma.md  remote-acquire-ssh.md  storage-image-walkthrough.md  unlock-luks-volume.md  unlock-veracrypt-hidden.md
docs/handbook/: chain-of-custody.md  debrief-checklist.md  evidence-handling.md  incident-response-runbook.md  index.md  reporting-templates.md  witness-statement-template.md
docs/integrations/: elastic.md  ghidra.md  ida-pro.md  index.md  jupyter.md  misp.md  siem-generic.md  splunk.md  timesketch.md  wireshark.md
docs/javascripts/: asciinema-defaults.js  copy-cli-blocks.js  mermaid-theme.js
docs/migration/: 0.1-to-0.2.md  index.md
docs/overview/: architecture.md  data-layer-composition.md  plugin-discovery.md
docs/performance/: index.md  memory-overhead.md  offload-throughput.md  profiling.md  startup-time.md
docs/reference/: cli.md  config.md  events.md  extras.md  interfaces.md  plugins.md
docs/security/: dual-use-statement.md  index.md  opsec.md  threat-model.md
docs/stylesheets/: cli-block.css  extra.css  mermaid-zoom.css
docs/workshop/: exercises.md  index.md  intro.md  slides-outline.md
examples/: 00_doctor.py  01_open_raw_image.py  02_compose_nand_stack.py  03_auto_open.py  04_unlock_luks.py  05_unlock_auto.py  06_offload_pbkdf2.py  07_offload_argon2.py  08_remote_image_dryrun.py  09_register_custom_plugin.py  10_event_bus_subscriber.py  11_filesystem_walk.py  12_carve_unallocated.py  README.md  _synthetic.py
src/deepview/: __init__.py  __main__.py
tests/: _factories.py  conftest.py
tests/integration/: __init__.py  test_full_stack.py
(+472 files in other folders)
