[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "deepview"
version = "0.2.0"
description = "Cross-platform computer system forensics and runtime analysis toolkit"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "structlog>=23.0",
    "platformdirs>=4.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
memory = [
    "volatility3>=2.5",
    "yara-python>=4.3",
]
tracing = []
linux_monitoring = [
    "bcc>=0.29",
    "pyroute2>=0.7",
    "psutil>=5.9",
    "netfilterqueue>=1.1",
]
instrumentation = [
    "frida>=16.0",
    "lief>=0.14",
    "capstone>=5.0",
]
vm = []
detection = [
    "pyattck>=7.1",
    "stix2>=3.0",
]
hardware = [
    "leechcore>=2.0",
]
firmware = [
    "chipsec>=1.10",
    "uefi-firmware>=1.9",
]
gpu = [
    "pycuda>=2022.1",
    "pyopencl>=2022.1",
]
ml = [
    "scikit-learn>=1.3",
    "xgboost>=2.0",
]
sigma = [
    "pyyaml>=6.0",
]
sidechannel = [
    "numpy>=1.24",
    "scipy>=1.10",
]
disassembly = [
    "capstone>=5.0",
    "pyhidra>=1.0",
]
storage = [
    "pytsk3>=20231007",
    "pyfsapfs>=20231205",
    "pyfsntfs>=20231028",
    "pyfsxfs>=20220829",
    "pyfsbtrfs>=20220704",
    "pyfsf2fs>=20220214",
    "pyfshfs>=20231125",
    "pyfsext>=20231023",
]
compression = [
    "zstandard>=0.22",
    "lz4>=4.3",
    "python-lzo>=1.15",
]
ecc = [
    "reedsolo>=1.7",
    "galois>=0.3",
]
offload_gpu = [
    "pyopencl>=2022.1",
    "pycuda>=2022.1",
]
containers = [
    "cryptography>=41.0",
    "argon2-cffi>=23.1",
    "pycryptsetup>=0.2; platform_system=='Linux'",
    "libbde-python>=20230319",
    "libfvde-python>=20230319",
]
remote_acquisition = [
    "paramiko>=3.3",
    "grpcio>=1.58",
    "grpcio-tools>=1.58",
    "python-ipmi>=0.5",
    "forensic1394>=0.3",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.5",
    "mkdocs-mermaid2-plugin>=1.1",
    "pymdown-extensions>=10.7",
    "mkdocs-asciinema-player-plugin>=0.0.4",
]
all = [
    "deepview[memory]",
    "deepview[tracing]",
    "deepview[linux_monitoring]",
    "deepview[instrumentation]",
    "deepview[vm]",
    "deepview[detection]",
    "deepview[hardware]",
    "deepview[firmware]",
    "deepview[gpu]",
    "deepview[ml]",
    "deepview[sigma]",
    "deepview[sidechannel]",
    "deepview[disassembly]",
    "deepview[storage]",
    "deepview[compression]",
    "deepview[ecc]",
    "deepview[offload_gpu]",
    "deepview[containers]",
    "deepview[remote_acquisition]",
    "deepview[docs]",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
    "pytest-mock>=3.10",
    "mypy>=1.5",
    "ruff>=0.1",
]

[project.scripts]
deepview = "deepview.cli.app:main"

[project.entry-points."deepview.plugins"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.mypy]
strict = true
python_version = "3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "platform_linux: marks tests as Linux-only",
    "platform_macos: marks tests as macOS-only",
    "platform_windows: marks tests as Windows-only",
    "requires_root: marks tests that require root/admin privileges",
    "integration: marks integration tests",
    "slow: marks slow-running tests",
    "requires_ghidra: marks tests that require Ghidra installation",
    "requires_hopper: marks tests that require Hopper installation",
]
